# output-audio-stream

./: CMakeLists.txt  README.md
audio/: CMakeLists.txt  pulseaudio-device-list.cc  test.cc
audio/client/: client.cc  client_LEGACY.cc
audio/server/: server.cc  server_LEGACY.cc
linux-audiowire/client/: CMakeLists.txt  linux-audiowire-client.cc
linux-audiowire/server/: CMakeLists.txt  linux-audiowire-server.cc
linux-audiowire_LEGACY/: CMakeLists.txt
linux-audiowire_LEGACY/client/: CMakeLists.txt  linux-audiowire-client.cc
linux-audiowire_LEGACY/server/: linux-audiowire-server.cc
linux-wifisound/server/: CMakeLists.txt  linux-wifisound-server.cc
linux-wifisound_LEGACY/: CMakeLists.txt
linux-wifisound_LEGACY/client/: CMakeLists.txt  linux-wifisound-client.cc
streamsome/: CMakeLists.txt
streamsome/include/streamsome/: audio.hh  common.hh  enet.hh  pulseaudio.hh  utils.hh
utils/cmake/: legacy.cmake
